<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/label_device_address"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/device_state"
            android:textSize="18sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="233dp"
            android:layout_height="24dp"
            android:layout_margin="5dp"
            android:text="@string/disconnected"
            android:textSize="20sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/nb_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:showText="true"
            android:text="@string/nb_enable"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:thumb="@drawable/switch_btn"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_layout"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/debug_logcat"
            android:layout_width="287dp"
            android:layout_height="273dp"
            android:gravity="bottom"
            android:hint="@string/log"
            android:padding="10dp"
            android:textColor="#000000" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/clear_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/clear_btn"
                android:layout_width="34dp"
                android:layout_height="48dp"
                android:src="@android:drawable/ic_notification_clear_all"
                tools:ignore="ContentDescription" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/copy_btn"
                android:layout_width="34dp"
                android:layout_height="48dp"
                android:src="?android:attr/actionModeCopyDrawable"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="AT command:"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/at_com"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:ems="8"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/at"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textAllCaps="true"
            tools:ignore="Autofill,LabelFor" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="left|bottom"/>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eeprom_log_read"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:onClick="eeprom_log_read_config"
            android:text="@string/eeprom_log_read"
            android:textSize="12sp" />


        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/debug_write_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:onClick="nb_cmd_config"
            android:text="@string/send_cmd"
            android:textSize="12sp" />


        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/eeprom_event_read"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:onClick="eeprom_event_read_config"
            android:text="@string/eerpom_tamper_read"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">


        <Button
            android:id="@+id/daily_log"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:text="save daily event"
            android:textSize="12sp" />

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/tamper_log"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:text="save tamper event"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_view"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:onClick="exitApp"
            android:text="Exit"
            android:background="@android:drawable/editbox_background_normal"
            android:textSize="12sp"/>



    </LinearLayout>


</LinearLayout>